tests/suite/fail/generated/types/fail_assign_i32_to_f64_2.ny
fn main() {
    let x: f64 = 1 //~ ERROR Type mismatch
    print(0)
}
